--- a/lecture10/project1.html
+++ b/lecture10/project1.html
@@ -106,7 +106,7 @@
                     </ul>
                 </div>
             </div>
-            <div>
+             <div>
                 <h3>Jeans</h3>
                 <p><strong>Description: </strong>Classic jeans with a slim fit and stylish design.</p>
                 </p>
@@ -132,8 +132,64 @@
                     </ul>
                 </div>
             </div>
+        </div>
+        <div>
+            <h2>Home</h2>
+            <div>
+                <h3>Table Lamp</h3>
+                <p><strong>Description: </strong> Modern and stylish table lamp to enhance your home decor.</p>
+                </p>
+                <p><strong>Price: </strong>$39.99</p>
+                <p><strong>Availability: </strong>In stock</p>
+                <br>
+                <img src="../image/lamp.jpg" alt="T-Shirt Image" width="200px">
+                <div>
+                    <a href="">View Details</a>
+                    <ul>
+                        <li>
+                            <p><Strong>Brand: </Strong>Home Essentials</p>
+                        </li>
+                        <li>
+                            <p><strong>Color: </strong>White</p>
+                        </li>
+                        <li>
+                            <p><strong>Dimensions: </strong> 12 inches (height)</p>
+                        </li>
+                        <li>
+                            <p><strong>Material: </strong>Ceramic, Metal</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <h3>Throw Pillow</h3>
+                <p><strong>Description: </strong> Soft and comfortable throw pillow for your living room or bedroom.</p>
+                <p><strong>Price: </strong>$24.99</p>
+                <p><strong>Availability: </strong>In stock</p>
+                <br>
+                <img src="../image/pillow.jpg" alt="T-Shirt Image" width="200px">
+                <div>
+                    <a href="">View Details</a>
+                    <ul>
+                        <li>
+                            <p><Strong>Brand: </Strong>Cozy Home</p>
+                        </li>
+                        <li>
+                            <p><strong>Color: </strong>Gray</p>
+                        </li>
+                        <li>
+                            <p><strong>Dimensions: </strong> 18 x 18 inches</p>
+                        </li>
+                        <li>
+                            <p><strong>Material: </strong>Cotton, Polyester</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
         </div>
+        <div>© 2023 Product Catalog, All rights reserved.</div>
+
     </div>
 
 </body>
