--- a/lecture10/project1.html
+++ b/lecture10/project1.html
@@ -15,14 +15,14 @@
             <h1>Product Catalog</h1>
             <ul>
                 <li>
-                    <a href="">Electronics</a>
+                    <a href="#electronices">Electronics</a>
                 </li>
-                <li><a href="">Clothing</a></li>
-                <li><a href="">Home</a></li>
+                <li><a href="#clothing">Clothing</a></li>
+                <li><a href="#home">Home</a></li> 
             </ul>
         </div>
         <div>
-            <h2>Electronics</h2>
+            <h2 id="electronices">Electronics</h2>
             <div>
                 <h3>Laptop</h3>
                 <p><strong>Description: </strong>High-performance laptop with the latest processer and ample storage.
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div>
-            <h2>Clothing</h2>
+            <h2 id="clothing">Clothing</h2>
             <div>
                 <h3>T-Shirt</h3>
                 <p><strong>Description: </strong>Casual and comfortable t-shirt made from premium quality cotton.</p>
@@ -134,7 +134,7 @@
             </div>
         </div>
         <div>
-            <h2>Home</h2>
+            <h2 id="home">Home</h2>
             <div>
                 <h3>Table Lamp</h3>
                 <p><strong>Description: </strong> Modern and stylish table lamp to enhance your home decor.</p>
