--- a/lecture11/project1.html
+++ b/lecture11/project1.html
@@ -18,7 +18,7 @@
         <video src="./videoFile.mp4" width="500px" height="500px" controls></video>
     </div>
 
-    <!-- <iframe src="../lecture10/index.html" frameborder="0" width="700px" height="500px"></iframe> -->
+    <iframe src="../lecture10/index.html" frameborder="0" width="700px" height="500px"></iframe>
 
 
     <!-- You tube video adds -->
