--- a/lecture15/index.html
+++ b/lecture15/index.html
@@ -50,13 +50,13 @@
             height: 150px;
         }
 
-        span{
+        /* span{
             background-color: aquamarine;
             border: solid green 5px;
             border-radius: 5px;
             width: 300px;
             height: 200px;
-        }
+        } */
     </style>
     
 </head>
