--- a/lecture18/index.html
+++ b/lecture18/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Unit dimenstion</title>
+
+    <style>
+        /* .box{
+            width: 25%;
+            border: 2px solid red;
+        } */
+        .parent {
+            border: 1px solid black;
+            background-color: beige;
+            width: 50%;
+        }
+
+        .child {
+            border: 1px solid aqua;
+            background-color: blueviolet;
+            width: 20%;
+        }
+    </style>
 </head>
+
 <body>
-    
+
+    <!-- <div class="box">
+        Welcome to codehelp
+    </div> -->
+
+    <div class="parent">
+        <div class="child">
+            CHILD
+        </div>
+    </div>
+
 </body>
+
 </html>
