--- a/lecture18/index.html
+++ b/lecture18/index.html
@@ -7,34 +7,17 @@
     <title>Unit dimenstion</title>
 
     <style>
-        /* .box{
-            width: 25%;
-            border: 2px solid red;
-        } */
-        .parent {
-            border: 1px solid black;
-            background-color: beige;
-            width: 50%;
-        }
-
-        .child {
-            border: 1px solid aqua;
-            background-color: blueviolet;
-            width: 20%;
-        }
+       .box{
+        border: 2px solid red;
+        width: 50%;
+       }
     </style>
 </head>
 
 <body>
 
-    <!-- <div class="box">
-        Welcome to codehelp
-    </div> -->
-
-    <div class="parent">
-        <div class="child">
-            CHILD
-        </div>
+    <div class="box">
+        Welcome to CodeDelp
     </div>
 
 </body>
