--- a/lecture18/index.html
+++ b/lecture18/index.html
@@ -7,18 +7,44 @@
     <title>Unit dimenstion</title>
 
     <style>
-       .box{
+       /* .box{
         border: 2px solid red;
         width: 50%;
+       } */
+
+       
+       /* case 1 */
+       /* .parent{
+        border: 2px solid black;
+        background-color:aqua ;
+        width: 50%;
+       }
+       .child{
+        border: 2px solid red;
+        background-color: beige;
+        width: 20%;
+       } */
+
+       .firstpara{
+        border: 1px solid black;
+        font-size: 5rem;
        }
     </style>
 </head>
 
 <body>
 
-    <div class="box">
+    <!-- <div class="box">
         Welcome to CodeDelp
-    </div>
+    </div> -->
+
+    <!-- Case 1 -->
+    <!-- <div class="parent">
+        <div class="child">
+            CHILD
+        </div>
+    </div> -->
+    <p class="firstpara">Hello Jone</p>
 
 </body>
 
