--- a/lecture18/index.html
+++ b/lecture18/index.html
@@ -25,6 +25,11 @@
         width: 20%;
        } */
 
+       /* .firstpara{
+        border: 1px solid black;
+        font-size: 5rem;
+       } */
+
        .firstpara{
         border: 1px solid black;
         font-size: 5rem;
