--- a/lecture18/index.html
+++ b/lecture18/index.html
@@ -34,6 +34,11 @@
         border: 1px solid black;
         font-size: 5rem;
        }
+       .para1{
+        background-color: rebeccapurple;
+        width: 500px;
+        height: 500px;
+       }
     </style>
 </head>
 
@@ -50,6 +55,7 @@
         </div>
     </div> -->
     <p class="firstpara">Hello Jone</p>
+    <p class="para1">Hello Jown how are you</p>
 
 </body>
 
