--- a/lecture18/index.html
+++ b/lecture18/index.html
@@ -7,55 +7,19 @@
     <title>Unit dimenstion</title>
 
     <style>
-       /* .box{
-        border: 2px solid red;
-        width: 50%;
-       } */
-
-       
-       /* case 1 */
-       /* .parent{
-        border: 2px solid black;
-        background-color:aqua ;
-        width: 50%;
-       }
-       .child{
-        border: 2px solid red;
-        background-color: beige;
-        width: 20%;
-       } */
-
-       /* .firstpara{
-        border: 1px solid black;
-        font-size: 5rem;
-       } */
-
-       .firstpara{
-        border: 1px solid black;
-        font-size: 5rem;
-       }
-       .para1{
-        background-color: rebeccapurple;
-        width: 500px;
-        height: 500px;
-       }
+        .box{
+            border: 3px solid red;
+            width: 25%;
+        }
     </style>
+    
 </head>
 
 <body>
 
-    <!-- <div class="box">
-        Welcome to CodeDelp
-    </div> -->
-
-    <!-- Case 1 -->
-    <!-- <div class="parent">
-        <div class="child">
-            CHILD
-        </div>
-    </div> -->
-    <p class="firstpara">Hello Jone</p>
-    <p class="para1">Hello Jown how are you</p>
+    <div class="box">
+        Welcome to codehelp
+    </div>
 
 </body>
 
