--- a/lecture18/index.html
+++ b/lecture18/index.html
@@ -7,20 +7,84 @@
     <title>Unit dimenstion</title>
 
     <style>
-        .box{
+        * {
+            margin: 0px;
+            padding: 0px;
+        }
+
+        /* .box{
             border: 3px solid red;
             width: 25%;
+        } */
+        /* .parent{
+            border: 2px solid black;
+            background-color: beige;
+            width: 50%;
+        }
+        .child{
+            border: 2px solid green;
+            background-color: aqua;
+            width: 20%;
+        } */
+        /* .container {
+            border: 2px solid green;
+            background-color: aquamarine;
+            height: 100vh;
+            width: 50vw;
+        } */
+
+        /* .box1 {
+            border: 1px solid red;
+            font-size: 100px;
+        } */
+
+        /* .container{
+            font-size: 10px;
+        }
+        .box{
+            font-size: 10em;
+        } */
+
+        .firstPara{
+            border: 1px solid black;
+            font-size: 5rem;
         }
     </style>
-    
+
 </head>
 
 <body>
 
-    <div class="box">
+    <!-- <div class="box">
         Welcome to codehelp
-    </div>
+    </div> -->
 
+    <!-- <div class="parent">
+        <div class="child">
+            CHILD
+        </div>
+    </div> -->
+
+    <!-- 
+         <div class="container">
+        Welcome to codehelp
+    </div> -->
+
+    <!-- Px Case
+    <div class="box1">
+        Love baber
+    </div> -->
+
+    <!-- em dimention -->
+    <!-- <p>Hello JI</p>
+    <div class="container">
+        <div class="box">
+            Welcome to codehelp
+        </div>
+    </div> -->
+
+    <!-- rem dimention -->
+    <p class="firstPara">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, rem.</p>
 </body>
 
 </html>
