--- a/lecture21/two.html
+++ b/lecture21/two.html
@@ -37,7 +37,13 @@
             width: 170px;
         }
 
-        @media  (max-width:640px) {
+        /* @media  (max-width:640px) {
+            .container{
+                flex-direction: column;
+            }
+        } */
+
+        @media only screen and (max-width: 640px) {
             .container{
                 flex-direction: column;
             }
