--- a/lecture23/index.html
+++ b/lecture23/index.html
@@ -43,6 +43,8 @@
 
             /* @keyframes duration | easing-function | delay |
                 iteration-count | direction | fill-mode | play-state | name */
+
+                /* Shorthand Notation */
             animation: 5s linear 1s infinite alternate none running rightMovement;
 
         }
@@ -68,6 +70,7 @@
             border: 3px solid yellow;
             position: relative;
             animation-name: leftMovement;
+            /* Shorthand Notation */
             animation: 5s ease-out 1s infinite alternate none running leftMovement;
         }
 
@@ -93,6 +96,8 @@
             position: relative;
             top: 130px;
             left: 530px;
+
+            /* Shorthand Notation */
             animation: 10s ease-in-out 0s infinite alternate-reverse none running circleMovement;
         }
 
