--- a/lecture24/index.html
+++ b/lecture24/index.html
@@ -11,14 +11,23 @@
             background-color: beige;
             border: 2px solid black;
             /* transition-property: width; Only width property alow hover effect */
-            transition-property: all;
+            /* transition-property: all;
             transition-duration: 4s;
             transition-delay: 1s;
-            transition-timing-function: linear;
+            transition-timing-function: linear; */
+
+            /* Shorthand notation */
+
+            /* property name | duration | easing function | delay */
+            /* transition: all 2s ease-in-out 5s; */
+
+            /* Apply to 2 properties */
+            transition: width 2s, height 5s;
         }
 
         .box:hover{
             width: 800px;
+            height: 600px;
             background-color: blue;
         }
     </style>
