--- a/lecture25/index.html
+++ b/lecture25/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
-    <div class="box">
-        This is codehelp's box
+    <div class="container">
+        <div class="box">
+            <p>This is codehelp's box</p>
+        </div>
     </div>
 </body>
 </html>
