--- a/lecture27/index.html
+++ b/lecture27/index.html
@@ -15,6 +15,7 @@
         .container {
             width: 100vw;
             height: 100vh;
+            /* min-height: 980px; */
             background-color: #8BC6EC;
             background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
             display: flex;
@@ -23,8 +24,8 @@
         }
 
         .card {
-            width: 250px;
-            height: 400px;
+            width: 270px;
+            height: 420px;
             background-color: white;
             border-radius: 20px;
             object-fit: cover;
@@ -32,15 +33,16 @@
             flex-direction: column;
             align-items: center;
             gap: 20px;
-            padding: 20px;
+            padding: 15px;
         }
 
-        .img-wrap{
-            height: 55%;
+        .img-wrap {
+            height: 60%;
+            object-fit: cover;
         }
 
         .card img {
-            
+            width: 100%;
             border-radius: 10px;
         }
 
@@ -50,8 +52,7 @@
         }
 
         .card p {
-            font-size: 14px;
-
+            font-size: 15px;
         }
     </style>
 </head>
@@ -61,11 +62,11 @@
     <div class="container">
         <div class="card">
             <div class="img-wrap">
-                <img src="./image/qr code.png" alt="QR Code">
+                <img src="./image/qrcode.png" alt="QR Code">
             </div>
             <h2>Improve your Front end skills buy developing Projects</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum perspiciatis expedita temporibus. Nihil,
-                eius fugit?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut molestias sint, commodi repellat ullam quia
+                officiis impedit atque!p>
         </div>
     </div>
 </body>
