--- a/lecture27/two.html
+++ b/lecture27/two.html
@@ -52,20 +52,28 @@
 
         .leftWrap {
             width: 70%;
-            gap: 60px;
+            gap: 49px;
             height: 80%;
             display: flex;
             flex-direction: column;
+            /* align-items: center; */
+            justify-content: center;
         }
 
         .leftWrap h1 {
             font-size: 2.2rem;
         }
-        .countWrap{
+
+        .countWrap {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
+        }
+
+        .numSection {
+            font-size: 1.7rem;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -81,15 +89,15 @@
                         quaerat nisi. Eligendi ducimus molestiae assumenda repudiandae.</p>
                     <div class="countWrap">
                         <div>
-                            <span>10k</span>
+                            <span class="numSection">10k</span>
                             <p>Comments</p>
                         </div>
                         <div>
-                            <span>214</span>
+                            <span class="numSection">214</span>
                             <p>Paid Users</p>
                         </div>
                         <div>
-                            <span>12M+</span>
+                            <span class="numSection">12M+</span>
                             <p>Views</p>
                         </div>
                     </div>
