--- a/lecture27/two.html
+++ b/lecture27/two.html
@@ -4,12 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <title>Thired Card</title>
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
         }
 
         .container {
@@ -61,7 +70,14 @@
         }
 
         .leftWrap h1 {
-            font-size: 2.2rem;
+            font-size: 2rem;
+            font-family: 'Playfair Display', serif;
+            font-weight: 900;
+        }
+
+        .sub-heading {
+            font-size: 12px;
+            font-weight: 500;
         }
 
         .countWrap {
@@ -75,6 +91,11 @@
             font-size: 1.7rem;
             font-weight: bold;
         }
+
+        .comment{
+            font-size: 14px;
+            font-weight: 300;
+        }
     </style>
 </head>
 
@@ -85,20 +106,21 @@
             <div class="leftBox">
                 <div class="leftWrap">
                     <h1>Get insights that help your business grow</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, quae totam omnis distinctio
-                        quaerat nisi. Eligendi ducimus molestiae assumenda repudiandae.</p>
+                    <p class="sub-heading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ipsum odit
+                        eaque accusantium
+                        totam repellendus minus sit. Consequuntur, deleniti dignissimos?</p>
                     <div class="countWrap">
                         <div>
                             <span class="numSection">10k</span>
-                            <p>Comments</p>
+                            <p class="comment">Comments</p>
                         </div>
                         <div>
                             <span class="numSection">214</span>
-                            <p>Paid Users</p>
+                            <p class="comment">Paid Users</p>
                         </div>
                         <div>
                             <span class="numSection">12M+</span>
-                            <p>Views</p>
+                            <p class="comment">Views</p>
                         </div>
                     </div>
                 </div>
