--- a/lecture28/grids.html
+++ b/lecture28/grids.html
@@ -12,6 +12,14 @@
         <div class="item">B</div>
         <div class="item">C</div>
         <div class="item">D</div>
+        <div class="item">A</div>
+        <div class="item">B</div>
+        <div class="item">C</div>
+        <div class="item">D</div>
+        <div class="item">A</div>
+        <div class="item">B</div>
+        <div class="item">C</div>
+        <div class="item">D</div>
      </div>
 </body>
 </html>
