--- a/lecture29/index.html
+++ b/lecture29/index.html
@@ -13,10 +13,50 @@
 <body class="body-container">
     <div class="container">
         <header class="header-container">
-            <h1 class="title">Codehelp Blog</h1>
-            <p class="sub-title">Utilize this space to incorporate a captivating subheading crafted by ChatGPT, adding
-                depth and intrique to your blog.</p>
+            <div class="header-wrap">
+                <h1 class="title">CodeHelp Blog</h1>
+                <p class="sub-title">Utilize this space to incorporate a captivating subheading crafted by ChatGPT,
+                    adding
+                    depth and intrique to your blog.</p>
+            </div>
         </header>
+        <div class="main-container">
+            <!-- Card 1 start here -->
+            <div class="card-container">
+                <a href="#" class="card-image-wrap">
+                    <img src="https://source.unsplash.com/random/600×400?healthy" alt="1 card Image" class="card-img"
+                        loading="lazy">
+                </a>
+                <div class="card-title-wrap">
+                    <a href="#" class="card-title-anchor">
+                        <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-discription">Check out the latest tech gadgets hitting the market, from
+                        smartphones to smartwatche</p>
+                </div>
+                <div class="card-footer-wrap">
+                    <div class="auther-wrap">
+                        <div class="authar-wrap">
+                            <div class="auther-avatar-container">
+                                <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                    alt="Avatar Image" class="avatar-pic" loading="lazy">
+                            </div>
+                            <div class="auther-info-wrap">
+                                <span>Jhon Doe</span>
+                                <span>Sept 19, 2021</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tag-wrap">
+                        <a href="">Technology</a>
+                    </div>
+                </div>
+                <div class="">
+
+                </div>
+            </div>
+            <!-- Card 1 end here -->
+        </div>
     </div>
 </body>
 
